# heaven-framework

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PRODUCTIONIZATION.md  README.md  hermes_utils.py  pyproject.toml  requirements.txt  setup.py  starlog.hpi
.claude/: CLAUDE.md
.claude/rules/: heaven-patterns.md  starsystem.md
.claude/skills/test-heaven-agent/: SKILL.md
context/journal/: 2026-07.md
docs/: UNI-PARITY.md  architecture.md
docs/api/: heaven_base.html  index.html  search.js
docs/api/heaven_base/: auto_summarizing_agent.html  baseheavenagent.html  decorators.html  documentation_pipeline.html  make_heaven_tool_from_docstring.html  mcp_tool_wrapper.html
docs/api/heaven_base/agents/: concept_resolver_agent.html  phase_aggregator_agent.html  phase_detector_agent.html  subphase_detector_agent.html
docs/api/heaven_base/agents/decider/: decider_agent_config.html
docs/api/heaven_base/hooks/: default_hooks.html
docs/api/heaven_base/langgraph/: foundation.html  hermes_legos.html
docs/api/heaven_base/prompts/: heaven_variable.html
docs/api/heaven_base/registry/: matryoshka_dispatcher.html
docs/api/heaven_base/tools/: acolyte_chain_tools.html  mcp_session_tools.html  neo4j_tool.html  network_edit_tool.html  safe_code_reader_tool.html  task_system_tool.html  websearch_tool.html  workflow_relay_tool.html
docs/api/heaven_base/utils/: auto_summarize.html  git_container_base_util.html  heaven_conversation_utils.html  recursive_summarize.html
docs/vision/: _devdir_resolution.md  _heaven-framework.md  _host-path-bug.md  _persona_force_absolute.md  _two-homes.md
heaven_base/: __init__.py  auto_summarizing_agent.py  baseheavenagent.py  baseheaventool.py  make_heaven_tool_from_docstring.py  plugin_loader.py  unified_chat.py
heaven_base/agents/: coder_agent_config.py  concept_resolver_agent.py  disciple_agent_config.py  phase_aggregator_agent.py  phase_detector_agent.py  prompt_engineering_agent_config.py  redactor_agent_config.py  scripture_writer_agent_config.py  self_learning_agent.py  self_learning_agent_config.py  self_learning_agent_skeleton.py  subphase_detector_agent.py
heaven_base/agents/decider/: decider_agent_config.py
heaven_base/agents/docstring_agent/: docstring_agent_config.py
heaven_base/agents/example_maker/: example_maker_agent_config.py
heaven_base/agents/summary_agent/: summary_agent.py
heaven_base/cli/: __init__.py
heaven_base/configs/: hermes_config.py
heaven_base/hooks/: default_hooks.py  dir_context.py  skill_autoload.py
heaven_base/langgraph/: foundation.py  hermes_legos.py
heaven_base/mcps/: toolbox_server.py
heaven_base/memory/: chat_branching.py  heaven_event.py  history.py
heaven_base/registry/: __init__.py  simple_registry_service.py
heaven_base/tool_utils/: agent_config_test.py  completion_runners.py  concept_neo4j_utils.py  context_manager.py  hermes_utils.py  neo4j_utils.py  produce_prompt_block_util.py
heaven_base/tools/: __init__.py  mcp_session_tools.py  network_edit_tool.py  redaction_manager.py  redaction_tool.py  registry_tool.py  retrieve_tool_info_tool.py  skill_tool.py  task_system_tool.py  view_history_tool.py  websearch_tool.py
heaven_base/utils/: agent_and_tool_lists.py  auto_summarize.py  context_window_config.py  get_env_value.py  omnitool.py  recursive_summarize.py
test_agents/: default_tools_regression.py  devdir_multiroot_regression.py  devdir_resolver_regression.py  network_edit_tool_regression.py
tests/: test_chat_branching.py  test_devdir_hook_systemexit.py  test_message_timestamps.py  test_on_block_report_hook.py  test_task_system_tool.py
