[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "heaven-framework"
version = "0.1.36"
description = "HEAVEN - Hierarchical, Embodied, Autonomously Validating Evolution Network"
readme = "README.md"
authors = [
    {name = "HEAVEN Team", email = "heaven@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    # google-adk / google-genai / langchain-google-genai are deliberately NOT here — ADK is dead-by-default
    # (opt-in `create(adk=True)`, never called) and google-adk is a heavy tree. The Gemini (GOOGLE) provider is
    # optional: `pip install heaven-framework[google]` (ChatGoogleGenerativeAI is imported lazily in unified_chat).
    # pydantic is now a RANGE (>=2.10.6,<3), not `==2.10.6`: the old hard pin existed ONLY because
    # ToolArgsSchema's dynamic-model DI broke on 2.11+ (a bogus `__config_class__=` create_model kwarg that
    # pydantic silently dropped → lost extra='forbid'). That's fixed (baseheaventool uses the universal
    # `__config__=ConfigDict(extra='forbid')`); tool-schema JSON is byte-identical on 2.10.6 AND 2.11, and a live
    # MiniMax agent runs a tool turn under 2.11. The provider wrappers already allow pydantic <3. (v3 later needs
    # the remaining ~6 deprecation spots cleaned: 1 class Config, 1 v1 @validator, 4 .dict().)
    "langchain-anthropic==0.3.13",
    "langchain-core==0.3.84",
    "langchain-deepseek==0.1.2",
    "langchain-groq==0.2.4",
    "langchain-openai==0.3.22",
    "langchain==0.3.28",
    "langgraph==0.2.60",
    "litellm==1.80.0",
    "pydantic>=2.10.6,<3",
    "requests==2.33.1",
    "httpx==0.28.1",
    "fastmcp==2.9.0",
    "skill-manager-mcp>=0.1.11",
]

[project.optional-dependencies]
google = [
    # The Gemini provider (ProviderEnum.GOOGLE) + the opt-in ADK tool path. NOT installed by default —
    # google-adk forces pydantic>=2.12, so it lives here, isolated from the base install.
    "langchain-google-genai==2.1.5",
    "google-genai==1.73.1",
    "google-adk==1.31.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
heaven-framework-toolbox = "heaven_base.mcps.toolbox_server:main"

[project.urls]
Homepage = "https://github.com/sancovp/heaven-framework"
Repository = "https://github.com/sancovp/heaven-framework.git"
Documentation = "https://heaven-framework.readthedocs.io"
Issues = "https://github.com/sancovp/heaven-framework/issues"

[tool.setuptools]
packages = [
    "heaven_base",
    "heaven_base.agents", 
    "heaven_base.agents.summary_agent",
    "heaven_base.agents.decider",
    "heaven_base.agents.docstring_agent",
    "heaven_base.agents.example_maker",
    "heaven_base.cli",
    "heaven_base.configs", 
    "heaven_base.langgraph",
    "heaven_base.mcps",
    "heaven_base.memory",
    "heaven_base.progenitor",
    "heaven_base.prompts",
    "heaven_base.registry",
    "heaven_base.swarm",
    "heaven_base.tools",
    "heaven_base.tool_utils",
    "heaven_base.utils"
]

[tool.setuptools.package-data]
heaven_base = ["py.typed"]
"heaven_base.swarm" = ["*.conf"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']
